--- a/accountability_app/app/views/sites/index.html.erb
+++ b/accountability_app/app/views/sites/index.html.erb
@@ -90,10 +90,11 @@
   </script>
 
   <script>
-  window.onload = function(){
+
+  $(document).ready(function() {
     var ctx = document.getElementById("campaign_chart").getContext("2d");
     window.myBar = new Chart(ctx).Bar(barChartData);
-   }
+  });
 
   var randomScalingFactor = function(){ return Math.round(Math.random()*100)};
   var totalDollar = []; 
@@ -112,9 +113,7 @@
   ]
 };
 
-var myBarChart = new Chart(ctx).Bar(data, options);
-  
 
-  </script>
+ </script>
 
 
