--- a/accountability_app/app/assets/stylesheets/sites.scss
+++ b/accountability_app/app/assets/stylesheets/sites.scss
@@ -62,22 +62,21 @@ p{
 .independent, .independent a {
     color: #FFCC00;
 }
- #charts {
+/* #charts {
     margin-top: 1em;
     height:40em;
     font-family: 'Lato', sans-serif;
-   /* padding-right: 20px;
-    padding-left: 20px;*/
+    padding-right: 20px;
+    padding-left: 20px;
   }
 
   .container_pie{
     margin-top:5em;
-   /* margin:10px;*/
     margin-left:-3.5em;
     margin-bottom: -5em;
     padding-bottom: 8em;
-
-  }
+*/
+ /* }*/
 
   .container_bar{
     margin-left: 500px;
