--- a/accountability_app/app/views/sites/index.html.erb
+++ b/accountability_app/app/views/sites/index.html.erb
@@ -92,10 +92,16 @@
   
   <script>
 
-  $(document).ready(function() {
-    var ctx = document.getElementById("campaign_chart").getContext("2d");
-    window.myBar = new Chart(ctx).Bar(barChartData);
-  });
+  // $(document).ready(function() {
+  //   var ctx = document.getElementById("campaign_chart").getContext("2d");
+  //   window.myBar = new Chart(ctx).Bar(barChartData);
+  // });
+
+  
+(function() {
+
+  var ctx2 = document.getElementById("campaign_chart").getContext("2d");
+
 
   var randomScalingFactor = function(){ return Math.round(Math.random()*100)};
   var totalDollar = []; 
@@ -111,7 +117,13 @@
         data : [18,17.5,12.4,8.5,7.3,6.6,6.4]
       }
   ]
+
 };
+
+var myBarChart = new Chart(ctx2).Bar(barChartData);
+
+})();
+
 </script>
 
 
