made changes to styles

--- a/accountability_app/app/views/layouts/application.html.erb
+++ b/accountability_app/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
 </div>
 
 <!-- End of FOOTER -->
-<!-- <footer>
+<footer>
 <div id="container">
   <div id= "bottom_footer">
     
@@ -82,7 +82,7 @@
       </div>
     </div>
 </div>  
- -->
+
 <!-- /footer> -->
 
 
