--- a/accountability_app/app/views/bills/passed_bills.html.erb
+++ b/accountability_app/app/views/bills/passed_bills.html.erb
@@ -6,7 +6,7 @@
 
 <% @passed_bills.each do |bill| %>
   <div>
-    <h3>Title: <%= bill[:title] %></h3>
+    <h3 class="bill_title">Title: <%= bill[:title] %></h3>
   </div> 
   <div>
     <p>Bill Number: <%= bill[:number] %> </p>
