--- a/accountability_app/app/views/watchlists/index.html.erb
+++ b/accountability_app/app/views/watchlists/index.html.erb
@@ -4,5 +4,14 @@
 <br>
 
 <% @watchlist.senators.each do |senator| %>
-  <div><h3><%= link_to senator.first_name + " " + senator.last_name, senator_path(senator) %></h3></div>
+  <div><h2><%= link_to senator.first_name + " " + senator.last_name, senator_path(senator) %></h2></div>
 <% end %>
+<br> 
+<br> 
+<br> 
+<br> 
+<br> 
+<br> 
+
+
+</div>
