changes to app.csS

--- a/accountability_app/app/assets/stylesheets/application.css
+++ b/accountability_app/app/assets/stylesheets/application.css
@@ -14,10 +14,10 @@
  *= require_self
  *= require bootstrap-3.2.0.min.css
  */
-.senator-form {
+/*.senator-form {
   border: 2px solid black;
   background-color: blue;
-}
+}*/
  
 
 .flag {
