--- a/app/views/sites/about.html.erb
+++ b/app/views/sites/about.html.erb
@@ -30,7 +30,7 @@
 
     <div class="row">
       <h1>Sandra Stark</h1>
-      <p>Sandra lives and works in San Francisco, California. She studied art and Maryland Institute, College of Art. She follows politics, and enjoys thinking about how systems could be better.  In her free time she likes to work on her trailer, in Manchester, Ca.</p>
+      <p>Sandra lives and works in San Francisco, California. She studied art at Maryland Institute, College of Art. She follows politics, and enjoys thinking about how systems could be better.  In her free time she likes to work on her trailer, in Manchester, Ca.</p>
       <p><em>Contact information:</p>
       <p>Phone: Nanya</p>
       <p>Email: sandra@sandrastark.net</p>
