--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -10,4 +10,13 @@
   color: red;
 }
 
+footer {
+  margin-top: 50px;
+  padding-left: 150px;
+  padding-right: 150px;
+  padding-bottom: 25px;
+  padding-top: 25px;
+  background: #BACBD9;
+}
+
 
