--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -7,8 +7,8 @@
     </div>
   </div>
 
-  <div id="senate_graph" div align="center">
-    <%= image_tag("senate_seats02.png") %>
+  <div id="senate_graph" class="col-xs-12" div align="center">
+    <!-- <%= image_tag("senate_seats02.png") %> -->
   </div>
 
 <div class="container">
