--- a/app/assets/stylesheets/senatorsindex.scss
+++ b/app/assets/stylesheets/senatorsindex.scss
@@ -2,8 +2,24 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+#senators {
+  width: 250px;
+}
+
 .ui-autocomplete {
   border: 1px solid black;
-  width: 150px;
+  width: 250px;
   list-style-type: none;
+  background: white;
+  max-height: 200px;
+  overflow: scroll;
+  font-size: 20px;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.senator-form, .ind-senator {
+  text-align: center;
 }
