--- a/app/assets/stylesheets/sites.scss
+++ b/app/assets/stylesheets/sites.scss
@@ -1,6 +1,7 @@
 // Place all the styles related to the sites controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
 #index_banner{
   height:20em;
   width:100%;
@@ -24,7 +25,13 @@ p{
 }
 
 #senate_graph{
-  margin-top:3em;
+  margin-top: 1em;
+  background-image: url("senate_seats02.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  height: 500px;
+  max-width: 100%;
 }
 
 #about_banner{
@@ -39,11 +46,6 @@ p{
   font-family: 'Lato', sans-serif;
   margin-left: 5em;
   margin-right:5em;
-}
-
-
-#senator_container{
- 
 }
 
 .republican, .republican a {
@@ -105,11 +107,15 @@ p{
 
 footer {
   margin-top: 50px;
-  padding-left: 150px;
-  padding-right: 150px;
+  padding-left: 25px;
+  padding-right: 25px;
   padding-bottom: 25px;
   padding-top: 25px;
   background: #BACBD9;
+}
+
+.app-name {
+  font-size: 25px;
 }
 
   
