--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'autocomplete-rails.js' %>
   <%= csrf_meta_tags %>
-  <link href='http://fonts.googleapis.com/css?family=Lato:400,700,900,400italic,700italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lato:400,700,900,400italic,700italic' rel='stylesheet' type='text/css'>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -59,15 +59,15 @@
 <footer class="footer">
   <div class="row">
 
-    <div class="col-sm-6">
-      <h4>Senator Accountablity Project</h4>
+    <div id="about" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 ">
+      <h4 class="app-name">Senator Accountablity Project</h4>
       <div id= "developed_by">
         <a href="/about">About Us</a><br>
         Developed by Samuel F. Cabral, Andrew D. Pohl, Sandra Stark
       </div>
     </div>
 
-    <div id="disclosure" class="col-sm-6">
+    <div id="disclosure" class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
       This is not a government website nor is it sponsored by any government agency.
       Information provided through GovTrack.us API, and the New York Times Congress API.
       We do not endorse any specific Senators, Political Parties, or Bills.
