--- a/app/views/senators/index.html.erb
+++ b/app/views/senators/index.html.erb
@@ -113,24 +113,24 @@
   </script>
 
 <div class='senator container'>
-  <h1>Find your senator</h1>
 
-  <div class="senator-form">
-  <%= form_for :senator, url: "/search", method: :get do |f| %>
-    <label for="senators">Search For A Senator: </label>
-    <input id="senators" name="senator_name">
-    <%= f.submit "Search" %>
-     <div class="alert_message">
+    <div class="senator-form">
+        <h1>Find your senator</h1>
+        <%= form_for :senator, url: "/search", method: :get do |f| %>
+        <!-- <label for="senators">Search For A Senator: </label> -->
+        <input id="senators" name="senator_name" placeholder="Search For A Senator">
+        <%= f.submit "Search" %>
+    </div>
+    <div class="alert_message">
         <% flash.each do |name, msg| %>
           <%= content_tag :div, msg, class: name %>
         <% end %>
-      </div>
-  <% end %>
-  </div>
-
+    </div>
+    <% end %>
+    
     <% @senators.order(:state).each_with_index do | senator, index | %>
       <% if index == 0 || index == 25 || index == 50 || index == 75  %>
-        <div class="col-md-3">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 ind-senator">
       <% end %>
       <h4 class='senator_name_index <%= senator.political_party.downcase %>'> <%= link_to senator.first_name + " " + senator.last_name, senator_path(senator)%></h4>
       <h4 class='senator_state_index <%= senator.political_party.downcase %>'><%= senator.state%></h4>
@@ -139,4 +139,5 @@
       <% end %>
 
      <% end %>
+
 </div>
