--- a/app/assets/stylesheets/senatorsindex.scss
+++ b/app/assets/stylesheets/senatorsindex.scss
@@ -23,3 +23,19 @@
 .senator-form, .ind-senator {
   text-align: center;
 }
+
+.name {
+  text-transform: uppercase;
+}
+
+.red {
+  color: red;
+}
+
+.blue {
+  color: blue;
+}
+
+.yellow {
+  color: #FFCC00;
+}
