--- a/app/views/sites/about.html.erb
+++ b/app/views/sites/about.html.erb
@@ -21,7 +21,7 @@
 
     <div class="row">
       <h1>Andrew D. Pohl</h1>
-      <p>Andrew Pohl is a junior full-stack web developer, currently living in the San Francisco Bay Area.  After spending the better part of his adult life as a musician and working in non-profits with children, he ventured into a new career path in programming, beginning with course work at General Assembly.  Outside of development, Andrew enjoys live music, writing for various music blogs, performing with whichever band he happens to be in at the time, operating his record label Sell The Heart Records, working out, traveling, and random high-fives.</p>
+      <p>Andrew Pohl is a front-end web developer, currently living in the San Francisco Bay Area.  Outside of development, Andrew enjoys live music, writing for various music blogs, performing with whichever band he happens to be in at the time, operating his record label <a href="https://selltheheartrecords.com">Sell The Heart Records,</a>, working out, traveling, and random high-fives.</p>
       <p><em>Contact information:</p>
       <p>Phone: 707-478-9352</p>
       <p>Email: andrewdpoh@gmail.com</p>
