--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
-<div class= "user_greeting">
-
-<h1>Welcome, <%= current_user.first_name %>!</h1>
-
-</div>
+  <div class= "user_greeting">
+    <h1 class="greeting">Welcome, <%= current_user.first_name %>!</h1><br>
+    <h2>Navigate to the "Senators" page to see a list of all 100 Senators.  By clicking on one of them, you will be able to view up-to-date information regarding their voting record, as well as how you can reach out to them and their offices.  While visiting a Senator's individual page, you will have the option to add them to a watchlist, which serves as a means of staying on top of multiple Senators on one page</h2><br>
+    <h2>Navigate to either the "Recently Introduced Bills" or the "Recently Passed Bills" pages to see a list of the 20 most recent bills within each category within the Senate.</h2>
+  </div>
 </div>
