--- a/app/assets/stylesheets/sites.scss
+++ b/app/assets/stylesheets/sites.scss
@@ -27,7 +27,7 @@ p {
 
 #senate_graph {
   margin-top: 1em;
-  background-image: url("senate_seats02.png");
+  background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/c/ce/113th_United_States_Senate_Structure.svg/2000px-113th_United_States_Senate_Structure.svg.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -115,6 +115,11 @@ footer {
 
 .app-name {
   font-size: 25px;
+}
+
+.noBoot {
+  text-align: center;
+  margin-bottom: -20px;
 }
 
 @media (max-width: 460px) {
