--- a/app/views/senators/show.html.erb
+++ b/app/views/senators/show.html.erb
@@ -1,10 +1,10 @@
 <div class='container'>
   
   <div class="row">
-    <div class='senator_container col-sm-5'>
-      <img src="<%= @senator.showpics %>"/>
+    <div class='senator_container col-xs-12 col-sm-12 col-md-5 col-lg-5'>
+      <img class="senator-photo" src="<%= @senator.showpics %>"/>
     </div>
-    <div class='senator_container col-sm-5'>
+    <div class='senator_container col-xs-12 col-sm-12 col-md-5 col-lg-5'>
       <h1 class='senator_info_main'><%= @senator.first_name + " " + @senator.last_name%></h1>
       <h2 class='senator_info'><%= @senator.political_party %></h2>
       <br>
@@ -28,7 +28,7 @@
         </div>
       <% end %>
     </div>
-    <div class="senator_state_flag col-sm-2">
+    <div class="senator_state_flag col-xs-12 col-sm-12 col-md-2 col-lg-2">
       <img class="flag" src="<%=@senator.showflag %>"/>
       <br>
       <br>
