--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -6,27 +6,27 @@
       <P>The goal of this project is to provide current and relevant information on every member of the United States Senate. We provide up-to-date information on bills being passed through the Senate, as well as, voting records for each Senator. Our mission is to help voters be more informed, and to provide a means of fast communication with their Senator.</p>
     </div>
   </div>
-
-  <div id="senate_graph" class="col-xs-12" div align="center">
-    <!-- <%= image_tag("senate_seats02.png") %> -->
+  
+  <div class="container">
+    <div id="senate_graph" class="col-xs-12" div align="center"></div>
   </div>
 
-<div class="container">
-<!-- resposive -->
-<div class="row">
-  <div class="senator_vote_container col-xs-12 col-sm-12 col-md-12 col-lg-6">
-    <div class="canvas" style="top:400";>
-        <h4 class="noBoot"> Men vs. Women Ratio </h4>
-        <canvas id="canvas" height="425" width="350"></canvas>
+  <div class="container">
+  <!-- resposive -->
+  <div class="row">
+    <div class="senator_vote_container col-xs-12 col-sm-12 col-md-12 col-lg-6">
+      <div class="canvas" style="top:400";>
+          <h4 class="noBoot"> Men vs. Women Ratio </h4>
+          <canvas id="canvas" height="425" width="350"></canvas>
+      </div>
+    </div>
+    <div class="senator_vote_container col-xs-12 col-sm-12 col-md-12 col-lg-6">
+      <div class="campaign_chart">
+        <h4 class="noBoot"> 2014 Campaign Financing Chart In Millions </h4>
+        <canvas id="campaign_chart" height="450" width="350" ></canvas>    
+      </div>
     </div>
   </div>
-  <div class="senator_vote_container col-xs-12 col-sm-12 col-md-12 col-lg-6">
-    <div class="campaign_chart">
-      <h4 class="noBoot"> 2014 Campaign Financing Chart In Millions </h4>
-      <canvas id="campaign_chart" height="450" width="350" ></canvas>    
-    </div>
-  </div>
-</div>
 </div>
 
 
