Added "s" to the end of state
* Added "s" to the end of states on Bills page

--- a/app/views/bills/passed_bills.html.erb
+++ b/app/views/bills/passed_bills.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="bills-title">Latest Bills Passed by the United State Senate</h1>
+  <h1 class="bills-title">Latest Bills Passed by the United States Senate</h1>
 <br>
 
   <div class="passed-bills">
