--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,7 +59,7 @@
   <div class="row">
 
     <div id="about" class="col-xs-12 col-sm-12 col-md-6 col-lg-6 ">
-      <h4 class="app-name">Senator Accountablity Project</h4>
+      <h4 class="app-name">Senator Accountability Project</h4>
       <div id= "developed_by">
         <a href="/about">About Us</a><br>
         Developed by Samuel F. Cabral, Andrew D. Pohl, Sandra Stark
